--- a/styles/EnglishSite.css
+++ b/styles/EnglishSite.css
@@ -71,6 +71,42 @@ body {
   .books .book p {
     margin: 0%;
   }
+  .Box {
+    display: flex;
+    justify-content: center;
+  }
+  .BoxD {
+    display: flex;
+    max-width: 76%;
+    padding: 30px;
+    background-color: #140e78;
+  }
+  .NameBook button {
+    width: 200px;
+    height: 50px;
+    color: white;
+    font-size: 20px;
+    background-color: #140e78;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .NameBook button img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+  .Description {
+    margin-left: 30px;
+  }
+  .authorBox {
+    display: flex;
+    align-items: center;
+  }
+  .authorBox img {
+    width: 50px;
+    height: 50px;
+  }
 }
 @media (min-width: 615px) {
   .Header {
@@ -144,6 +180,42 @@ body {
     margin: 0%;
     display: flex;
     justify-content: center;
+  }
+  .Box {
+    display: flex;
+    justify-content: center;
+  }
+  .BoxD {
+    display: flex;
+    max-width: 76%;
+    padding: 30px;
+    background-color: #140e78;
+  }
+  .NameBook button {
+    width: 200px;
+    height: 50px;
+    color: white;
+    font-size: 20px;
+    background-color: #140e78;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .NameBook button img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+  .Description {
+    margin-left: 30px;
+  }
+  .authorBox {
+    display: flex;
+    align-items: center;
+  }
+  .authorBox img {
+    width: 50px;
+    height: 50px;
   }
 }
 
