--- a/styles/EnglishSite.scss
+++ b/styles/EnglishSite.scss
@@ -88,6 +88,48 @@ body{
     
         }
     }
+    .Box{
+        display: flex;
+        justify-content: center;
+    }
+    .BoxD{
+        display: flex;
+        max-width: 76%;
+        padding: 30px;
+        background-color: #140e78;
+        
+    }
+    .NameBook{
+        button{
+        width: 200px;
+        height: 50px;
+        color: white;
+        font-size: 20px;
+        background-color: #140e78;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img{
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+        }
+    }
+    }
+    .Description{
+        margin-left: 30px;
+    }
+    .authorBox{
+        display: flex;
+        align-items: center;
+
+        img{
+            width: 50px;
+            height: 50px;
+        }
+
+    }
 }
 
 
@@ -179,5 +221,47 @@ body{
             justify-content: center;
         }
     }
+    }
+    .Box{
+        display: flex;
+        justify-content: center;
+    }
+    .BoxD{
+        display: flex;
+        max-width: 76%;
+        padding: 30px;
+        background-color: #140e78;
+        
+    }
+    .NameBook{
+        button{
+        width: 200px;
+        height: 50px;
+        color: white;
+        font-size: 20px;
+        background-color: #140e78;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img{
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+        }
+    }
+    }
+    .Description{
+        margin-left: 30px;
+    }
+    .authorBox{
+        display: flex;
+        align-items: center;
+
+        img{
+            width: 50px;
+            height: 50px;
+        }
+
     }
 }
