--- a/styles/EnglishSite.scss
+++ b/styles/EnglishSite.scss
@@ -39,29 +39,25 @@ body{
         background-color: #140e78;
         padding: 50px;
         color: white;
-        
-        
+    
         h1{
             justify-content: center;
             display: flex;
             font-size: 50px;
             
-        }
+        }   
         .level-card{
             margin: 10px;
             border: 2px solid  silver;
-            background-color: darkblue;
+            background-color: darkblue;;
             border-radius: 10px;
             height: 100px;
-            width: 31%;
+            width: 100%;
             color: white;
             font-size: 40px;
         }
-        .levels{
-            display: flex;
-            justify-content: center;
-        }
-        }
+       
+    }
     .booksList{
         margin-top: 20px;
         display: flex;
