--- a/styles/EnglishSite.css
+++ b/styles/EnglishSite.css
@@ -38,10 +38,10 @@ body {
   .Your-level .level-card {
     margin: 10px;
     border: 2px solid silver;
-    background-color: darkblue;
+    background-color: red;
     border-radius: 10px;
-    height: 100px;
-    width: 100%;
+    height: 60px;
+    width: 93%;
     color: white;
     font-size: 40px;
   }
@@ -76,28 +76,21 @@ body {
     justify-content: center;
   }
   .BoxD {
-    display: flex;
     max-width: 76%;
     padding: 30px;
-    background-color: #140e78;
   }
-  .NameBook button {
-    width: 200px;
-    height: 50px;
-    color: white;
-    font-size: 20px;
-    background-color: #140e78;
+  .BoxD .photo {
     display: flex;
     justify-content: center;
-    align-items: center;
   }
-  .NameBook button img {
+  .NameBook {
+    display: flex;
+    justify-content: center;
+  }
+  .NameBook img {
     width: 20px;
     height: 20px;
     margin-right: 10px;
-  }
-  .Description {
-    margin-left: 30px;
   }
   .authorBox {
     display: flex;
@@ -142,7 +135,7 @@ body {
   .Your-level .level-card {
     margin: 10px;
     border: 2px solid silver;
-    background-color: darkblue;
+    background-color: red;
     border-radius: 10px;
     height: 100px;
     width: 31%;
