--- a/styles/EnglishSite.css
+++ b/styles/EnglishSite.css
@@ -196,6 +196,8 @@ body {
     margin: 0;
   }
   .booksList {
+    display: flex;
+    justify-content: center;
     background-color: silver;
   }
   .Box {
