--- a/styles/EnglishSite.css
+++ b/styles/EnglishSite.css
@@ -5,129 +5,6 @@ body {
 }
 
 @media (min-width: 300px) {
-  /* .Header{
-      height: 80px;
-      width: 100%;
-      background-color: red;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-
-      .HeaderPhoto{
-          img{ 
-              width: 105px;
-          }
-      }
-
-      h1{
-          font-size: 40px;
-          color: white;
-      }
-
-      .HeaderMenu{
-          button{
-              width: 82px;
-              height: 80px;
-              background-color: #140e78;
-
-          }
-      }
-  }
-  .Your-level{
-      background-color: #140e78;
-      padding: 50px;
-      color: white;
-
-
-      .levels{
-      }
-      h1{
-          justify-content: center;
-          display: flex;
-          font-size: 50px;
-
-      }   
-      .level-card{
-
-          margin: 10px;
-          border: 2px solid  silver;
-          background-color: red;;
-          border-radius: 10px;
-          height: 60px;
-          width: 93%;
-          color: white;
-          font-size: 40px;
-      }
-
-  }
-  .booksList{
-      margin-top: 20px;
-      display: flex;
-      justify-content: center;
-
-  }
-  .books {
-      display: ruby;
-      margin-top: 30px;
-      background-color: silver;
-
-      .book{
-          margin: 20px;
-          background-color: black;
-          color: white;
-          width: 300px;
-          font-size: 30px;
-
-          img{
-              width: 300px;
-          }
-          a{
-             color: white;
-          }
-          p{
-              margin: 0%;
-          }
-
-      }
-  }
-  .Box{
-      display: flex;
-      justify-content: center;
-  }
-  .BoxD{
-      padding: 30px;
-
-      .photo{
-          display: flex;
-          justify-content: center;
-      }
-  }
-  .NameBook{
-
-      display: flex;
-      justify-content: center;
-
-      img{
-          width: 20px;
-          height: 20px;
-          margin-right: 10px;
-      }
-
-  }
-  .Description{
-
-  }
-  .authorBox{
-      display: flex;
-      align-items: center;
-
-      img{
-          width: 50px;
-          height: 50px;
-      }
-
-  } */
   .Header {
     height: 80px;
     width: 100%;
@@ -296,25 +173,25 @@ body {
     display: flex;
     justify-content: center;
   }
-  .books {
+  #books {
     margin: 0px;
     display: ruby;
     background-color: silver;
     max-width: 76%;
   }
-  .books .book {
+  #books .book {
     margin: 20px;
     color: white;
     width: 250px;
     font-size: 30px;
   }
-  .books .book img {
+  #books .book img {
     width: 250px;
   }
-  .books .book a {
+  #books .book a {
     color: white;
   }
-  .books .book p {
+  #books .book p {
     margin: 0%;
     display: flex;
     justify-content: center;
