--- a/styles/EnglishSite.css
+++ b/styles/EnglishSite.css
@@ -1,129 +1,168 @@
+@charset "UTF-8";
 body {
   margin: 0px;
   padding: 0px;
   background-color: #140e78;
 }
 
+/* @media (min-width: 300px) {
+
+    .Header {
+        height: 80px;
+        width: 100%;
+        background-color: red;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .HeaderPhoto {
+            img { 
+                width: 105px;
+            }
+        }
+
+        h1 {
+            font-size: 40px;
+            color: white;
+        }
+
+        .HeaderMenu {
+            button {
+                width: 82px;
+                height: 80px;
+                background-color: #140e78;
+            }
+        }
+    }
+
+    .Your-level {
+        background-color: #140e78;
+        padding: 50px;
+        color: white;
+
+        h1 {
+            justify-content: center;
+            display: flex;
+            font-size: 50px;
+        }
+
+        .level-card {
+            margin: 10px;
+            border: 2px solid silver;
+            background-color: red;
+            border-radius: 10px;
+            height: 60px;
+            width: 93%;
+            color: white; // змінив колір з білого на чорний
+            font-size: 40px;
+        }
+
+        .booksList {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .books {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 30px;
+            background-color: silver;
+        }
+
+        .book {
+            margin: 20px;
+            background-color: black;
+            color: white;
+            width: 300px;
+            font-size: 30px;
+        }
+
+        .book img {
+            width: 300px;
+        }
+
+        .book a {
+            color: white;
+        }
+
+        .book p {
+            margin: 0;
+        }
+    }
+
+    .booksList{
+        display: flex;
+        justify-content: center;
+    }
+    .books{
+        background-color: silver;
+    }
+
+    .Box {
+        display: flex;
+        justify-content: center;
+    }
+
+    .book{
+        width: 250px;
+        margin: 15px;
+        img{
+            width: 100%;
+        }
+    }
+
+    .BoxD {
+        padding: 30px;
+    }
+
+    .photo {
+        display: flex;
+        justify-content: center;
+    }
+
+    .NameBook {
+        display: flex;
+        justify-content: center;
+
+        button {
+            width: 200px;
+            height: 50px;
+            color: black;
+            font-size: 20px;
+            background-color: #140e78;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            img {
+                width: 20px;
+                height: 20px;
+                margin-right: 10px;
+            }
+        }
+    }
+    .authorBox {
+        display: flex;
+        align-items: center;
+
+        img {
+            width: 50px;
+            height: 50px;
+        }
+    }
+
+
+    .ReadBook{
+        display: flex;
+        justify-content: center;
+    }
+
+    #fileContent {
+
+
+} */
 @media (min-width: 300px) {
-  .Header {
-    height: 80px;
-    width: 100%;
-    background-color: red;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .Header .HeaderPhoto img {
-    width: 105px;
-  }
-  .Header h1 {
-    font-size: 40px;
-    color: white;
-  }
-  .Header .HeaderMenu button {
-    width: 82px;
-    height: 80px;
-    background-color: #140e78;
-  }
-  .Your-level {
-    background-color: #140e78;
-    padding: 50px;
-    color: white;
-  }
-  .Your-level h1 {
-    justify-content: center;
-    display: flex;
-    font-size: 50px;
-  }
-  .Your-level .level-card {
-    margin: 10px;
-    border: 2px solid silver;
-    background-color: red;
-    border-radius: 10px;
-    height: 60px;
-    width: 93%;
-    color: white;
-    font-size: 40px;
-  }
-  .Your-level .booksList {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-  }
-  .Your-level .books {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 30px;
-    background-color: silver;
-  }
-  .Your-level .book {
-    margin: 20px;
-    background-color: black;
-    color: white;
-    width: 300px;
-    font-size: 30px;
-  }
-  .Your-level .book img {
-    width: 300px;
-  }
-  .Your-level .book a {
-    color: white;
-  }
-  .Your-level .book p {
-    margin: 0;
-  }
-  .booksList {
-    display: flex;
-    justify-content: center;
-    background-color: silver;
-  }
-  .Box {
-    display: flex;
-    justify-content: center;
-  }
-  .book {
-    width: 250px;
-    margin: 15px;
-  }
-  .book img {
-    width: 100%;
-  }
-  .BoxD {
-    padding: 30px;
-  }
-  .photo {
-    display: flex;
-    justify-content: center;
-  }
-  .NameBook {
-    display: flex;
-    justify-content: center;
-  }
-  .NameBook button {
-    width: 200px;
-    height: 50px;
-    color: black;
-    font-size: 20px;
-    background-color: #140e78;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .NameBook button img {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-  }
-  .authorBox {
-    display: flex;
-    align-items: center;
-  }
-  .authorBox img {
-    width: 50px;
-    height: 50px;
-  }
-}
-@media (min-width: 615px) {
   .Header {
     height: 80px;
     width: 100%;
@@ -172,6 +211,7 @@ body {
     margin-top: 20px;
     display: flex;
     justify-content: center;
+    background-color: none;
   }
   #books {
     margin: 0px;
@@ -237,6 +277,151 @@ body {
   .authorBox img {
     width: 50px;
     height: 50px;
+  }
+  .ReadBook {
+    display: flex;
+    justify-content: center;
+  }
+  #fileContent {
+    max-width: 76%;
+    overflow: auto; /* Добавляем прокрутку, если содержимое превышает размеры */
+    border: 1px solid #ccc; /* Добавляем рамку */
+    padding: 10px; /* Добавляем отступы */
+    background-color: #f9f9f9; /* Задаем цвет фона */
+    line-height: 2; /* Уменьшаем отступы между строками */
+    font-family: monospace; /* Устанавливаем моноширинный шрифт для лучшего отображения текста */
+    white-space: pre-wrap; /* Сохраняем пробелы и переносы строк */
+  }
+}
+@media (min-width: 615px) {
+  .Header {
+    height: 80px;
+    width: 100%;
+    background-color: red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .Header .HeaderPhoto img {
+    width: 100px;
+  }
+  .Header h1 {
+    font-size: 59px;
+    color: white;
+  }
+  .Header .HeaderMenu button {
+    width: 100px;
+    height: 80px;
+    background-color: #140e78;
+  }
+  .Your-level {
+    background-color: #140e78;
+    padding: 50px;
+    color: white;
+  }
+  .Your-level h1 {
+    justify-content: center;
+    display: flex;
+    font-size: 50px;
+  }
+  .Your-level .level-card {
+    margin: 10px;
+    border: 2px solid silver;
+    background-color: red;
+    border-radius: 10px;
+    height: 100px;
+    width: 31%;
+    color: white;
+    font-size: 40px;
+  }
+  .Your-level .levels {
+    display: flex;
+    justify-content: center;
+  }
+  .booksList {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    background-color: none;
+  }
+  #books {
+    margin: 0px;
+    display: ruby;
+    background-color: silver;
+    max-width: 76%;
+  }
+  #books .book {
+    margin: 20px;
+    color: white;
+    width: 250px;
+    font-size: 30px;
+  }
+  #books .book img {
+    width: 250px;
+  }
+  #books .book a {
+    color: white;
+  }
+  #books .book p {
+    margin: 0%;
+    display: flex;
+    justify-content: center;
+  }
+  .Box {
+    display: flex;
+    justify-content: center;
+  }
+  .BoxD {
+    display: flex;
+    max-width: 76%;
+    padding: 30px;
+    background-color: #140e78;
+  }
+  .BoxD .photo {
+    display: block;
+  }
+  .NameBook {
+    display: block;
+  }
+  .NameBook button {
+    width: 200px;
+    height: 50px;
+    color: white;
+    font-size: 20px;
+    background-color: #140e78;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .NameBook button img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+  .Description {
+    margin-left: 30px;
+  }
+  .authorBox {
+    display: flex;
+    align-items: center;
+  }
+  .authorBox img {
+    width: 50px;
+    height: 50px;
+  }
+  .ReadBook {
+    display: flex;
+    justify-content: center;
+  }
+  #fileContent {
+    max-width: 76%;
+    overflow: auto; /* Добавляем прокрутку, если содержимое превышает размеры */
+    border: 1px solid #ccc; /* Добавляем рамку */
+    padding: 10px; /* Добавляем отступы */
+    background-color: #f9f9f9; /* Задаем цвет фона */
+    line-height: 2; /* Уменьшаем отступы между строками */
+    font-family: monospace; /* Устанавливаем моноширинный шрифт для лучшего отображения текста */
+    white-space: pre-wrap; /* Сохраняем пробелы и переносы строк */
   }
 }
 
