--- a/styles/EnglishSite.scss
+++ b/styles/EnglishSite.scss
@@ -4,7 +4,7 @@ body{
     background-color: #140e78;
 }
 
-@media (min-width: 300px) {
+/* @media (min-width: 300px) {
   
     .Header {
         height: 80px;
@@ -93,9 +93,11 @@ body{
     .booksList{
         display: flex;
         justify-content: center;
+    }
+    .books{
         background-color: silver;
     }
-    
+
     .Box {
         display: flex;
         justify-content: center;
@@ -149,10 +151,18 @@ body{
         }
     }
     
-}
+     
+    .ReadBook{
+        display: flex;
+        justify-content: center;
+    }
+    
+    #fileContent {
+       
+       
+} */
 
-
-@media (min-width: 615px) {
+@media (min-width: 300px) {
     .Header{
     height: 80px;
     width: 100%;
@@ -214,6 +224,7 @@ body{
     margin-top: 20px;
     display: flex;
     justify-content: center;
+    background-color: none;
 
 
    
@@ -291,5 +302,182 @@ body{
             height: 50px;
         }
 
+    }
+    
+    .ReadBook{
+        display: flex;
+        justify-content: center;
+    }
+    
+    #fileContent {
+       
+        max-width: 76%;
+        overflow: auto; /* Добавляем прокрутку, если содержимое превышает размеры */
+        border: 1px solid #ccc; /* Добавляем рамку */
+        padding: 10px; /* Добавляем отступы */
+        background-color: #f9f9f9; /* Задаем цвет фона */
+        line-height: 2; /* Уменьшаем отступы между строками */
+        font-family: monospace; /* Устанавливаем моноширинный шрифт для лучшего отображения текста */
+        white-space: pre-wrap; /* Сохраняем пробелы и переносы строк */
+    }
+}
+
+@media (min-width: 615px) {
+    .Header{
+    height: 80px;
+    width: 100%;
+    background-color: red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+
+    .HeaderPhoto{
+        img{ 
+            width: 100px;
+        }
+    }
+
+    h1{
+        font-size: 59px;
+        color: white;
+    }
+
+    .HeaderMenu{
+        button{
+            width: 100px;
+            height: 80px;
+            background-color: #140e78;
+            
+        }
+    }
+    }
+
+    .Your-level{
+    background-color: #140e78;
+    padding: 50px;
+    color: white;
+    
+    
+    h1{
+        justify-content: center;
+        display: flex;
+        font-size: 50px;
+        
+    }
+    .level-card{
+        margin: 10px;
+        border: 2px solid  silver;
+        background-color: red;
+        border-radius: 10px;
+        height: 100px;
+        width: 31%;
+        color: white;
+        font-size: 40px;
+    }
+    .levels{
+        display: flex;
+        justify-content: center;
+    }
+    }
+    .booksList{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    background-color: none;
+
+
+   
+    }
+    #books {
+        margin: 0px;
+        display: ruby;
+        background-color: silver;
+        max-width: 76%;
+        
+    .book{
+        margin: 20px;
+        color: white;
+        width: 250px;
+        font-size: 30px;
+        
+        img{
+            width: 250px;
+        }
+        a{
+           color: white;
+
+        }
+        p{
+            margin: 0%;
+            display: flex;
+            justify-content: center;
+        }
+    }
+    }
+    .Box{
+        display: flex;
+        justify-content: center;
+    }
+    .BoxD{
+        display: flex;
+        max-width: 76%;
+        padding: 30px;
+        background-color: #140e78;
+
+        .photo{
+            display: block;
+        }
+        
+    }
+    .NameBook{
+        display: block;
+        button{
+        width: 200px;
+        height: 50px;
+        color: white;
+        font-size: 20px;
+        background-color: #140e78;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img{
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+        }
+
+    }
+    }
+    .Description{
+        margin-left: 30px;
+    }
+    .authorBox{
+        display: flex;
+        align-items: center;
+
+        img{
+            width: 50px;
+            height: 50px;
+        }
+
+    }
+    
+    .ReadBook{
+        display: flex;
+        justify-content: center;
+    }
+    
+    #fileContent {
+       
+        max-width: 76%;
+        overflow: auto; /* Добавляем прокрутку, если содержимое превышает размеры */
+        border: 1px solid #ccc; /* Добавляем рамку */
+        padding: 10px; /* Добавляем отступы */
+        background-color: #f9f9f9; /* Задаем цвет фона */
+        line-height: 2; /* Уменьшаем отступы между строками */
+        font-family: monospace; /* Устанавливаем моноширинный шрифт для лучшего отображения текста */
+        white-space: pre-wrap; /* Сохраняем пробелы и переносы строк */
     }
 }
