--- a/styles/EnglishSite.css
+++ b/styles/EnglishSite.css
@@ -5,163 +5,6 @@ body {
   background-color: #140e78;
 }
 
-/* @media (min-width: 300px) {
-
-    .Header {
-        height: 80px;
-        width: 100%;
-        background-color: red;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        .HeaderPhoto {
-            img { 
-                width: 105px;
-            }
-        }
-
-        h1 {
-            font-size: 40px;
-            color: white;
-        }
-
-        .HeaderMenu {
-            button {
-                width: 82px;
-                height: 80px;
-                background-color: #140e78;
-            }
-        }
-    }
-
-    .Your-level {
-        background-color: #140e78;
-        padding: 50px;
-        color: white;
-
-        h1 {
-            justify-content: center;
-            display: flex;
-            font-size: 50px;
-        }
-
-        .level-card {
-            margin: 10px;
-            border: 2px solid silver;
-            background-color: red;
-            border-radius: 10px;
-            height: 60px;
-            width: 93%;
-            color: white; // змінив колір з білого на чорний
-            font-size: 40px;
-        }
-
-        .booksList {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .books {
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 30px;
-            background-color: silver;
-        }
-
-        .book {
-            margin: 20px;
-            background-color: black;
-            color: white;
-            width: 300px;
-            font-size: 30px;
-        }
-
-        .book img {
-            width: 300px;
-        }
-
-        .book a {
-            color: white;
-        }
-
-        .book p {
-            margin: 0;
-        }
-    }
-
-    .booksList{
-        display: flex;
-        justify-content: center;
-    }
-    .books{
-        background-color: silver;
-    }
-
-    .Box {
-        display: flex;
-        justify-content: center;
-    }
-
-    .book{
-        width: 250px;
-        margin: 15px;
-        img{
-            width: 100%;
-        }
-    }
-
-    .BoxD {
-        padding: 30px;
-    }
-
-    .photo {
-        display: flex;
-        justify-content: center;
-    }
-
-    .NameBook {
-        display: flex;
-        justify-content: center;
-
-        button {
-            width: 200px;
-            height: 50px;
-            color: black;
-            font-size: 20px;
-            background-color: #140e78;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            img {
-                width: 20px;
-                height: 20px;
-                margin-right: 10px;
-            }
-        }
-    }
-    .authorBox {
-        display: flex;
-        align-items: center;
-
-        img {
-            width: 50px;
-            height: 50px;
-        }
-    }
-
-
-    .ReadBook{
-        display: flex;
-        justify-content: center;
-    }
-
-    #fileContent {
-
-
-} */
 @media (min-width: 300px) {
   .Header {
     height: 80px;
@@ -172,14 +15,14 @@ body {
     align-items: center;
   }
   .Header .HeaderPhoto img {
-    width: 100px;
+    width: 105px;
   }
   .Header h1 {
-    font-size: 59px;
+    font-size: 40px;
     color: white;
   }
   .Header .HeaderMenu button {
-    width: 100px;
+    width: 82px;
     height: 80px;
     background-color: #140e78;
   }
@@ -198,59 +41,66 @@ body {
     border: 2px solid silver;
     background-color: red;
     border-radius: 10px;
-    height: 100px;
-    width: 31%;
+    height: 60px;
+    width: 93%;
     color: white;
     font-size: 40px;
   }
-  .Your-level .levels {
-    display: flex;
-    justify-content: center;
-  }
-  .booksList {
+  .Your-level .booksList {
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    background-color: none;
   }
-  #books {
-    margin: 0px;
-    display: ruby;
+  .Your-level .books {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
     background-color: silver;
-    max-width: 76%;
   }
-  #books .book {
+  .Your-level .book {
     margin: 20px;
+    background-color: black;
     color: white;
-    width: 250px;
+    width: 300px;
     font-size: 30px;
   }
-  #books .book img {
-    width: 250px;
+  .Your-level .book img {
+    width: 300px;
   }
-  #books .book a {
+  .Your-level .book a {
     color: white;
   }
-  #books .book p {
-    margin: 0%;
+  .Your-level .book p {
+    margin: 0;
+  }
+  .booksList {
     display: flex;
     justify-content: center;
+  }
+  .books {
+    background-color: silver;
   }
   .Box {
     display: flex;
     justify-content: center;
   }
+  .book {
+    width: 250px;
+    margin: 15px;
+  }
+  .book img {
+    width: 100%;
+  }
   .BoxD {
-    display: flex;
-    max-width: 76%;
     padding: 30px;
-    background-color: #140e78;
   }
-  .BoxD .photo {
-    display: block;
+  .photo {
+    display: flex;
+    justify-content: center;
   }
-  .NameBook {
-    display: block;
+  .NameBook h1 {
+    display: flex;
+    justify-content: center;
   }
   .NameBook button {
     width: 200px;
@@ -267,9 +117,6 @@ body {
     height: 20px;
     margin-right: 10px;
   }
-  .Description {
-    margin-left: 30px;
-  }
   .authorBox {
     display: flex;
     align-items: center;
@@ -282,14 +129,15 @@ body {
     display: flex;
     justify-content: center;
   }
-  #fileContent {
-    max-width: 76%;
+  .fileContent {
+    display: none;
     overflow: auto; /* Добавляем прокрутку, если содержимое превышает размеры */
     border: 1px solid #ccc; /* Добавляем рамку */
-    padding: 10px; /* Добавляем отступы */
-    background-color: #f9f9f9; /* Задаем цвет фона */
+    padding: 30px; /* Добавляем отступы */
+    background-color: silver; /* Задаем цвет фона */
     line-height: 2; /* Уменьшаем отступы между строками */
-    font-family: monospace; /* Устанавливаем моноширинный шрифт для лучшего отображения текста */
+    font-size: 15px;
+    font-family: "Times New Roman", Times, serif; /* Устанавливаем моноширинный шрифт для лучшего отображения текста */
     white-space: pre-wrap; /* Сохраняем пробелы и переносы строк */
   }
 }
@@ -413,14 +261,16 @@ body {
     display: flex;
     justify-content: center;
   }
-  #fileContent {
+  .ReadBook .fileContent {
+    display: none;
     max-width: 76%;
     overflow: auto; /* Добавляем прокрутку, если содержимое превышает размеры */
     border: 1px solid #ccc; /* Добавляем рамку */
-    padding: 10px; /* Добавляем отступы */
-    background-color: #f9f9f9; /* Задаем цвет фона */
+    padding: 30px; /* Добавляем отступы */
+    background-color: silver; /* Задаем цвет фона */
     line-height: 2; /* Уменьшаем отступы между строками */
-    font-family: monospace; /* Устанавливаем моноширинный шрифт для лучшего отображения текста */
+    font-size: 15px;
+    font-family: "Times New Roman", Times, serif; /* Устанавливаем моноширинный шрифт для лучшего отображения текста */
     white-space: pre-wrap; /* Сохраняем пробелы и переносы строк */
   }
 }
