--- a/styles/EnglishSite.css
+++ b/styles/EnglishSite.css
@@ -21,6 +21,10 @@ body {
     font-size: 40px;
     color: white;
   }
+  .Header .HeaderMenu img {
+    width: 50px;
+    height: 50px;
+  }
   .Header .HeaderMenu button {
     width: 82px;
     height: 80px;
@@ -156,6 +160,10 @@ body {
   .Header h1 {
     font-size: 59px;
     color: white;
+  }
+  .Header .HeaderMenu img {
+    width: 50px;
+    height: 50px;
   }
   .Header .HeaderMenu button {
     width: 100px;
