--- a/styles/EnglishSite.scss
+++ b/styles/EnglishSite.scss
@@ -26,6 +26,10 @@ body{
         }
     
         .HeaderMenu {
+            img{
+                width: 50px;
+                height: 50px;
+            }
             button {
                 width: 82px;
                 height: 80px;
@@ -201,6 +205,10 @@ body{
     }
 
     .HeaderMenu{
+        img{
+            width: 50px;
+            height: 50px;
+        }
         button{
             width: 100px;
             height: 80px;
